@@ -3,6 +3,7 @@ $Id$
 2012-10-18  Alex Samorukov  <samm@os2.kiev.ua>
 	Compile fixes for Areca patch on FreeBSD.
 	Added support for the /dev/twsX (3ware 9750) controller on FreeBSD.
+	FreeBSD: Migrate 3ware interface to ata_pass_through()
 
 2012-10-16  Christian Franke  <franke@computer.org>
 
